board.css
.board-section {
  width: calc(100vw - 232px);
}

.board-head {
  display: grid;
  grid-template-columns: 3fr;
  gap: 32px;
  padding: 48px 64px;
}

.grid1 {
  grid-row: 1;
  grid-column: 1;
}

.grid2 {
  grid-row: 1;
  grid-column: 2;
  align-self: center;
}

.grid3 {
  grid-row: 1;
  grid-column: 3;
  align-self: center;
}

.board-head h1 {
  font-size: 61px;
  line-height: 73.2px;
  margin: 0;
}

.board-head-right-search {
  display: flex;
  justify-content: space-between;
  width: 312px;
  border-radius: 10px;
  border: 1px solid #a8a8a8;
  background: #ffffff;
  padding: 8px 16px;
  cursor: pointer;
}

.board-head-right-search input {
  font-size: 20px;
  line-height: 24px;
  border: none;
  flex-grow: 1;
  width: 100%;
}

.board-head-right-search input:focus {
  outline: none;
}

.board-head-right-search-lens {
  display: flex;
  gap: 16px;
  align-items: center;
}

.board-head-right-search-lens hr {
  height: 31px;
  margin: 0;
}

.board-head-right-search-lens img {
  width: 32px;
  height: 32px;
}

.board-head-right-search-lens img:hover {
  border-radius: 50%;
  background: #f4f4f4;
}

.board-head-right-add {
  display: flex;
  gap: 4px;
  align-items: center;
  border: unset;
  background: #2a3647;
  border-radius: 10px;
  padding: 8px 16px;
  cursor: pointer;
}

.board-head-right-add span {
  color: #ffffff;
  font-size: 21px;
  line-height: 25.2px;
  font-weight: 700;
}

.board-head-right-add img {
  width: 32px;
  height: 32px;
  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%)
    hue-rotate(30deg) brightness(104%) contrast(100%);
  z-index: 1;
}

.board-head-right-add:hover {
  background: #29abe2;
  border-color: #29abe2;
  box-shadow: 0px 4px 4px 0px #00000029;
}

.board-body {
  display: grid;
  padding: 0px 64px;
  row-gap: 26px;
  column-gap: 22px;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 1fr max-content;
}

.board-body-header {
  grid-row: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.board-body-header h2 {
  font-size: 20px;
  line-height: 24px;
  margin: 0;
  color: #2a3647;
}

.board-body-header-icon {
  width: 24px;
  height: 24px;
}

.board-body-header-icon:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(65%) sepia(16%) saturate(6653%)
    hue-rotate(165deg) brightness(94%) contrast(87%);
}

.board-body-body {
  overflow-y: scroll;
  grid-row: 2;
  display: flex;
  flex-direction: column;
  gap: 16px;
  flex-grow: 1;
  height: calc(100vh - 332px);
  padding: 6px;
}

.board-body-body::-webkit-scrollbar {
  display: none;
}

.board-body-body-no-task {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  border-radius: 10px;
  border: 1px dashed #a8a8a8;
  background-color: #e7e7e7;
  color: #a8a8a8;
  box-shadow: 0px 0px 4px 0px #00000029;
}

.board-body-body-no-task span {
  text-align: center;
}

.board-body-body-task {
  display: flex;
  flex-direction: column;
  background-color: #ffffff;
  padding: 16px;
  border-radius: 24px;
  gap: 24px;
  box-shadow: 0px 0px 6px 3px #00000014;
  flex-shrink: 0;
}

.board-body-body-task:hover {
  cursor: pointer;
}

.board-body-body-task-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.board-body-body-task-header button {
  display: none;
  background-color: #ffffff;
  border: unset;
  border-radius: 50%;
  padding: 0;
  justify-content: center;
  align-items: center;
}

.board-body-body-task-header img:hover {
  background-color: #d4e3ff;
  border-radius: 50%;
  cursor: pointer;
}

.board-body-body-task-label {
  background-color: #0038ff;
  border-radius: 8px;
  padding: 4px 16px;
  font-size: 16px;
  color: #ffffff;
}

.board-body-body-task-text {
  display: flex;
  flex-direction: column;
  gap: 8px;
  font-size: 16px;
  line-height: 19.2px;
}

.board-body-body-task-text h3 {
  margin: 0;
  color: #2a3647;
}

.board-body-body-task-text span {
  color: #a8a8a8;
  flex-grow: 1;
}

.board-body-body-task-progress {
  display: flex;
  justify-content: space-between;
  gap: 8px;
  align-items: center;
}

.board-body-body-task-progress-bar {
  width: 100%;
  height: 8px;
  background-color: #f4f4f4;
  border-radius: 8px;
  overflow: hidden;
  margin-right: 8px;
}

.board-body-body-task-progress-bar-progress {
  height: 100%;
  background-color: #4589ff;
  border-radius: 8px 0 0 8px;
}

.board-body-body-task-progress span {
  font-size: 12px;
  line-height: 14.4px;
  color: #000000;
}

.board-body-body-task-bottom {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.board-body-body-task-bottom-icon {
  width: 32px;
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.board-body-body-task-bottom-contactlist {
  display: flex;
  align-items: center;
}

.board-body-body-task-bottom-contact {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  width: 32px;
  height: 32px;
  border-radius: 45px;
  background-color: #ff7a00;
  border: 1px solid #ffffff;
}

.board-body-body-task-bottom-contact span {
  font-size: 12px;
  color: #ffffff;
}

.board-overlay-task-background {
  position: fixed;
  height: 100vh;
  width: 100vw;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 1;
}

.board-overlay-task {
  background-color: #ffffff;
  box-shadow: 0px 0px 4px 0px #00000029;
  padding: 48px 40px;
  display: flex;
  flex-direction: column;
  gap: 24px;
  border-radius: 30px;
  width: 445px;
  cursor: default;
  height: calc(100vh - 192px);
  overflow-y: scroll;
}

.board-overlay-task::-webkit-scrollbar {
  display: none;
}

.board-overlay-task-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.board-overlay-task-header span {
  background-color: #0038ff;
  color: #ffffff;
  font-size: 23px;
  line-height: 27.6px;
  border-radius: 8px;
  padding: 4px 24px;
}

.closeIcon {
  width: 32px;
  height: 32px;
}

.closeIcon:hover {
  cursor: pointer;
  background-color: #f4f4f4;
  border-radius: 50%;
}

.board-overlay-task-title {
  font-size: 61px;
  line-height: 73.2px;
  margin: 0;
  color: #000000;
}

.board-overlay-task-description {
  font-size: 20px;
  line-height: 24px;
  color: #000000;
}

.board-overlay-task-date {
  display: flex;
  align-items: center;
  gap: 25px;
  font-size: 20px;
  line-height: 24px;
}

.board-overlay-task-priority {
  display: flex;
  align-items: center;
  gap: 25px;
  font-size: 20px;
  line-height: 24px;
}

.board-overlay-task-priority-inner {
  display: flex;
  align-items: center;
  gap: 10px;
  color: #000000;
}

.board-overlay-task-contacts {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.board-overlay-task-contacts-span {
  font-size: 20px;
  line-height: 24px;
  color: #2a3647;
}

.board-overlay-task-contactlist {
  display: flex;
  flex-direction: column;
  gap: 4px;
  list-style: none;
  margin: 0;
  padding: 0;
  height: 176px;
  overflow-y: scroll;
}

.board-overlay-task-contactlist-contact {
  display: flex;
  align-items: center;
  padding: 7px 16px;
  gap: 16px;
}

.board-overlay-task-contactlist-contact-icon {
  width: 42px;
  height: 42px;
  color: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 45px;
}

.board-overlay-task-subtasks {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.board-overlay-task-subtasks-span {
  font-size: 20px;
  line-height: 24px;
  color: #2a3647;
}

.board-overlay-task-subtasklist {
  display: flex;
  flex-direction: column;
  gap: 4px;
  list-style: none;
  margin: 0;
  padding: 0;
  height: 156px;
  overflow-y: scroll;
}

.board-overlay-task-subtasklist-subtask {
  display: flex;
  align-items: center;
  padding: 6px 16px;
  gap: 16px;
}

.board-overlay-task-subtasklist-subtask:hover {
  background-color: #f4f4f4;
  border-radius: 8px;
}

.board-overlay-task-footer {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 8px;
  margin-top: auto;
}

.board-overlay-task-footer-inner {
  display: flex;
  align-items: center;
  gap: 8px;
}

.board-overlay-task-footer-inner span {
  font-size: 16px;
  line-height: 19.2px;
  color: #2a3647;
}

.board-overlay-task-footer-inner-inner {
  display: flex;
  align-items: center;
  gap: 8px;
}

.board-overlay-task-footer-inner-inner:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(65%) sepia(16%) saturate(6653%)
    hue-rotate(165deg) brightness(94%) contrast(87%);
}

.board-overlay-task-footer-inner img {
  color: #2a3647;
}

.board-overlay-task-footer-devider {
  height: 24px;
  color: #d1d1d1;
}

/* ==================================== */

.board-add-task-background {
  position: fixed;
  height: 100vh;
  width: 100vw;
  top: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 1;
  overflow: none;
}

.board-add-task {
  display: flex;
  flex-direction: column;
  background: #ffffff;
  box-shadow: 0px 0px 4px 0px #0000001a;
  padding: 64px 74px;
  border-radius: 30px;
  gap: 32px;
}

.board-add-task-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.board-add-task-header h1 {
  font-size: 61px;
  line-height: 73.2px;
  margin: 0;
}

.check-hover:hover {
  cursor: pointer;
  background-color: #d1d1d1;
  border-radius: 50%;
}

.board-overlay-task-edit {
  background-color: #ffffff;
  box-shadow: 0px 0px 4px 0px #00000029;
  padding: 48px 20px 48px 40px;
  display: flex;
  flex-direction: column;
  gap: 24px;
  border-radius: 30px;
  width: 465px;
  cursor: default;
  max-height: calc(100vh - 196px);
}

.board-overlay-task-edit-right {
  align-self: flex-end;
  padding-right: 20px;
}

.board-overlay-task-edit-container {
  display: flex;
  flex-direction: column;
  overflow-x: scroll;
  gap: 24px;
  width: calc(525px - 40px - 40px);
  padding-right: 20px;
}

.board-overlay-task-edit-content-box {
  width: 435px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.board-overlay-task-edit-content-box label {
  font-size: 20px;
  line-height: 24px;
  color: #2a3647;
}

.board-overlay-task-edit-content-box-input {
  border: 1px solid #d1d1d1;
  border-radius: 10px;
  padding: 12px 21px;
  font-size: 20px;
  line-height: 24px;
}

.board-add-Task-Icon-MediaQ {
  display: none;
}

.board-body-body-task-reposition {
  display: flex;
  flex-direction: column;
  padding: 16px;
  background-color: #2a3647;
  color: #ffffff;
  gap: 8px;
  justify-content: center;
  border-radius: 20px 0 20px 20px;
  z-index: 9999;
  position: relative;
  top: -200px;
  left: -12px;
}

.board-body-body-task-reposition span {
  padding: 8px 10px;
}

.board-body-body-task-reposition span:hover {
  background-color: #2a3d59;
  border-radius: 4px;
  cursor: pointer;
}

.board-body-body-task-reposition-background {
  position: fixed;
  height: 100vh;
  width: 100vw;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

.board-drag-area-highlight {
  border: 1px dashed #a8a8a8;
  box-shadow: 0px 0px 4px 0px #00000029;
  height: 244px;
  width: 100%;
  border-radius: 30px;
  display: flex;
  flex-shrink: 0;
}

.task-on-drag-rotate {
  transform: rotate(5deg);
}

